--- a/Arch Linux/fcitx5/.config/fcitx5/conf/pinyin.conf
+++ b/Arch Linux/fcitx5/.config/fcitx5/conf/pinyin.conf
@@ -1,9 +1,9 @@
+# 双拼方案
+ShuangpinProfile=Ziranma
 # 页大小
 PageSize=5
-# 预测个数
-PredictionSize=10
-# 启用预测
-Prediction=False
+# Enable Spell
+SpellEnabled=True
 # 启用颜文字
 EmojiEnabled=True
 # 启用拆字
@@ -16,18 +16,22 @@ CloudPinyinIndex=2
 PreeditInApplication=True
 # 在预编辑中显示完整拼音
 PinyinInPreedit=True
+# 启用预测
+Prediction=False
+# 预测个数
+PredictionSize=10
 # 选择第 2 个候选词
 SecondCandidate=
 # 选择第 3 个候选词
 ThirdCandidate=
 # 快速输入的触发键
 QuickPhraseKey=semicolon
+# Use V to trigger quickphrase
+VAsQuickphrase=True
 # 句子数量
 Number of sentence=2
 # 输入长于...时提示长词 (设置为 0 时禁用)
 LongWordLengthLimit=4
-# 双拼方案
-ShuangpinProfile=Ziranma
 # FirstRun
 FirstRun=False
 
@@ -62,6 +66,10 @@ VE_UE=True
 NG_GN=True
 # 内模糊音节 (xian -> xi'an)
 Inner=True
+# 短拼音的内模糊音节 (qie -> qi'e)
+InnerShort=True
+# Match partial finals (e -> en, eng, ei)
+PartialFinal=True
 # u <-> v
 V_U=False
 # an <-> ang
