--- a/Arch Linux/profile/.condarc
+++ b/Arch Linux/profile/.condarc
@@ -1,4 +1,6 @@
 channels:
-  - https://mirrors.ustc.edu.cn/anaconda/pkgs/free/
-  - defaults
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
+ssl_verify: true
 auto_activate_base: false
