--- a/Arch Linux/fontconfig/.config/fontconfig/fonts.conf
+++ b/Arch Linux/fontconfig/.config/fontconfig/fonts.conf
@@ -1,120 +1,102 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-    <alias>
-        <family>serif</family>
-        <prefer>
-            <family>Noto Serif</family>
-            <family>Noto Serif CJK SC</family>
-            <family>Noto Serif CJK TC</family>
-            <family>Noto Serif CJK JP</family>
-            <family>Noto Serif CJK KR</family>
-            <family>Noto Color Emoji</family>
-            <family>Noto Emoji</family>
-        </prefer>
-    </alias>
-    <alias>
-        <family>sans-serif</family>
-        <prefer>
-            <family>Noto Sans</family>
-            <family>Noto Sans CJK SC</family>
-            <family>Noto Sans CJK TC</family>
-            <family>Noto Sans CJK JP</family>
-            <family>Noto Sans CJK KR</family>
-            <family>Noto Color Emoji</family>
-            <family>Noto Emoji</family>
-        </prefer>
-    </alias>
-    <alias>
-        <family>sans-sans</family>
-        <prefer>
-            <family>Noto Sans CJK SC</family>
-            <family>Noto Sans CJK TC</family>
-            <family>Noto Sans CJK JP</family>
-            <family>Noto Sans CJK KR</family>
-            <family>Noto Color Emoji</family>
-            <family>Noto Emoji</family>
-        </prefer>
-    </alias>
-    <alias>
-        <family>tahoma</family>
-        <prefer>
-            <family>Noto Sans CJK SC</family>
-            <family>Noto Sans CJK TC</family>
-            <family>Noto Sans CJK JP</family>
-            <family>Noto Sans CJK KR</family>
-            <family>Noto Color Emoji</family>
-            <family>Noto Emoji</family>
-        </prefer>
-    </alias>
-    <alias>
-        <family>monospace</family>
-        <prefer>
-            <family>Fira Code</family>
-            <family>Noto Sans CJK SC</family>
-            <family>Noto Sans CJK TC</family>
-            <family>Noto Sans CJK JP</family>
-            <family>Noto Sans CJK KR</family>
-            <family>Noto Color Emoji</family>
-            <family>Noto Emoji</family>
-            <family>Noto Sans Mono</family>
-            <family>DejaVu Sans Mono</family>
-        </prefer>
-    </alias>
-    <alias>
-        <family>emoji</family>
-        <default>
-            <family>Noto Color Emoji</family>
-        </default>
-    </alias>
-    <alias>
-        <family>Apple Color Emoji</family>
-        <prefer>
-            <family>Noto Color Emoji</family>
-        </prefer>
-        <default>
-            <family>sans-serif</family>
-        </default>
-    </alias>
-    <alias>
-        <family>Segoe UI Emoji</family>
-        <prefer>
-            <family>Noto Color Emoji</family>
-        </prefer>
-        <default>
-            <family>sans-serif</family>
-        </default>
-    </alias>
-    <match target="pattern">
-        <test qual="any" name="family">
-            <string>sans-sans</string>
-        </test>
-        <edit name="family" mode="assign" binding="same">
-            <string>sans-sans</string>
-        </edit>
-    </match>
-    <match target="pattern">
-        <test qual="any" name="family">
-            <string>sans-sans</string>
-        </test>
-        <edit name="family" mode="assign" binding="same">
-            <string>sans-sans</string>
-        </edit>
-    </match>
-    <match target="pattern">
-        <test qual="any" name="family">
-            <string>sans-sans</string>
-        </test>
-        <edit name="family" mode="assign" binding="same">
-            <string>sans-sans</string>
-        </edit>
-    </match>
-    <match target="pattern">
-        <test qual="any" name="family">
-            <string>sans-sans</string>
-        </test>
-        <edit name="family" mode="assign" binding="same">
-            <string>sans-sans</string>
-        </edit>
-    </match>
+ <match target="font">
+  <edit name="rgba" mode="assign">
+   <const>rgb</const>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="hintstyle" mode="assign">
+   <const>hintslight</const>
+  </edit>
+ </match>
+ <!-- Default font (no fc-match pattern) -->
+ <match>
+  <edit name="family" mode="prepend">
+   <string>Noto Sans</string>
+  </edit>
+ </match>
+ <!-- Default font for the zh_CN locale (no fc-match pattern) -->
+ <match>
+  <test compare="contains" name="lang">
+   <string>zh_CN</string>
+  </test>
+  <edit name="family" mode="prepend">
+   <string>Noto Sans CJK SC</string>
+  </edit>
+ </match>
+ <!-- Default sans-serif font -->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>sans-serif</string>
+  </test>
+  <edit binding="same" name="family" mode="prepend">
+   <string>Noto Sans</string>
+  </edit>
+ </match>
+ <!-- Default serif fonts -->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>serif</string>
+  </test>
+  <edit binding="same" name="family" mode="prepend">
+   <string>Noto Serif</string>
+  </edit>
+ </match>
+ <!-- Default monospace fonts -->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>monospace</string>
+  </test>
+  <edit binding="same" name="family" mode="prepend">
+   <string>Sarasa Term SC</string>
+  </edit>
+ </match>
+ <!-- Fallback fonts preference order -->
+ <alias>
+  <family>sans-serif</family>
+  <prefer>
+   <family>Noto Sans</family>
+   <family>Noto Sans CJK SC</family>
+   <family>Noto Sans CJK TC</family>
+   <family>Noto Sans CJK JP</family>
+   <family>Noto Sans CJK KR</family>
+   <family>Noto Color Emoji</family>
+   <family>Noto Emoji</family>
+  </prefer>
+ </alias>
+ <alias>
+  <family>serif</family>
+  <prefer>
+   <family>Noto Serif</family>
+   <family>Noto Serif CJK SC</family>
+   <family>Noto Serif CJK TC</family>
+   <family>Noto Serif CJK JP</family>
+   <family>Noto Serif CJK KR</family>
+   <family>Noto Color Emoji</family>
+   <family>Noto Emoji</family>
+  </prefer>
+ </alias>
+ <alias>
+  <family>monospace</family>
+  <prefer>
+   <family>Sarasa Term SC</family>
+   <family>Sarasa Term TC</family>
+   <family>Sarasa Term J</family>
+   <family>Noto Color Emoji</family>
+   <family>Noto Emoji</family>
+  </prefer>
+ </alias>
+ <dir>~/.fonts</dir>
+ <match target="font">
+  <edit name="hinting" mode="assign">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="antialias" mode="assign">
+   <bool>true</bool>
+  </edit>
+ </match>
 </fontconfig>
