--- a/aria2/.config/aria2/aria2.conf
+++ b/aria2/.config/aria2/aria2.conf
@@ -2,9 +2,9 @@
 
 ### Basic ###
 dir=${HOME}/Downloads
-input-file=${XDG_CONFIG_HOME}/aria2/aria2.session
+input-file=${HOME}/.config/aria2/aria2.session
 # Save error/unfinished downloads to FILE on exit.
-save-session=${XDG_CONFIG_HOME}/aria2/aria2.session
+save-session=${HOME}/.config/aria2/aria2.session
 save-session-interval=60
 # Set the maximum number of parallel downloads for every queue item. See also the --split option.
 max-concurrent-downloads=5
